--- a/app/src/main/res/layout/activity_sign_up_no_acc2.xml
+++ b/app/src/main/res/layout/activity_sign_up_no_acc2.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="600dp"
+        android:onClick="nextLog2"
+        android:layout_marginTop="500dp"
         android:text="Дальше" />
 
     <EditText
