--- a/app/src/main/res/layout/activity_sign_up_no_acc2.xml
+++ b/app/src/main/res/layout/activity_sign_up_no_acc2.xml
@@ -15,6 +15,14 @@
         android:layout_marginTop="500dp"
         android:text="Дальше" />
 
+    <Button
+        android:id="@+id/btnBackToFirst"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="btnBackFirstClicked"
+        android:layout_alignParentBottom="true"
+        android:text="Назад" />
+
     <EditText
         android:id="@+id/txtLogin"
         android:layout_width="wrap_content"
