--- a/app/src/main/res/layout/activity_sign_up_no_acc2.xml
+++ b/app/src/main/res/layout/activity_sign_up_no_acc2.xml
@@ -50,6 +50,6 @@
         android:layout_marginTop="400dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Павторите пароль" />
+        android:hint="Повторите пароль" />
 
 </RelativeLayout>
