--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,13 @@
         android:textSize="40dp"
         android:text="Это Маин" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:onClick="signOutClicked"
+        android:layout_marginTop="500dp"
+        android:text="Выйти" />
+
 </RelativeLayout>
