--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -12,47 +12,40 @@
         android:id="@+id/editTextLogin"
         android:layout_width="321dp"
         android:layout_height="53dp"
-
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginTop="122dp"
+        android:layout_marginStart="44dp"
 
+
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="181dp"
         android:background="@drawable/body_for_edit_text"
-        android:ems="10"
         android:hint="Логин"
-        android:paddingLeft="20dp"
         android:inputType="textPersonName"
+        android:paddingLeft="20dp"
         android:textSize="30dp" />
+
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="245dp"
-        android:layout_height="wrap_content"
+        android:layout_width="321dp"
+        android:layout_height="53dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="233dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginRight="68dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword" />
+        android:layout_marginTop="323dp"
 
-    <Button
-        android:id="@+id/buttonEnter"
-        android:layout_width="166dp"
-        android:layout_height="59dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="236dp"
-        android:fontFamily="sans-serif-condensed"
-        android:onClick="onClick"
-        android:text="Войти" />
+
+        android:layout_marginEnd="47dp"
+        android:layout_marginRight="47dp"
+        android:background="@drawable/body_for_edit_text"
+        android:hint="Пароль"
+        android:inputType="textPassword"
+        android:paddingLeft="20dp"
+        android:textSize="30dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -63,17 +56,37 @@
         android:layout_marginBottom="94dp"
         android:hint="Первый раз в PennyJoy?"
         android:linksClickable="true"
-        android:textColorHint="@color/black" />
+        android:textColorHint="@color/forTheFirstTimeInPennyJoy" />
+
+
+    <Button
+        android:id="@+id/buttonEnter"
+        android:layout_width="274dp"
+        android:layout_height="29dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="236dp"
+        android:fontFamily="sans-serif-condensed"
+        android:onClick="onClick"
+        android:textSize="10dp"
+        android:text="Войти" />
+
 
     <Button
         android:id="@+id/buttonToSignUp"
-        android:layout_width="251dp"
-        android:layout_height="35dp"
-        android:background="@color/cardview_dark_background"
+        android:layout_width="274dp"
+        android:layout_height="29dp"
+        android:onClick="onClick"
+        android:text="Регистрация"
+        android:textSize="8dp"
+
+
+        android:background="@drawable/body_for_btn_registration_sign_in"
+
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="39dp"
-        android:onClick="onClick"
-        android:text="Регистрация"
+
         />
 </RelativeLayout>
