--- a/app/src/main/res/drawable/body_for_btn_registration_sign_in.xml
+++ b/app/src/main/res/drawable/body_for_btn_registration_sign_in.xml
@@ -1,19 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-
-    <solid
-        android:color="@color/white"/>
-
-
-    <size
-        android:width="274dp"
-        android:height="29dp"/>
-
-
-    <corners
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp"
-        android:bottomLeftRadius="15dp"
-        android:bottomRightRadius="15dp"/>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners  android:radius="15dp"/>
+    <solid android:color="@color/forTheBtnRegistrationSignIn"></solid>
 </shape>
