--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="forTheFirstTimeInPennyJoy">#9D9D9D</color>
     <color name="forTheBtnRegistrationSignIn">#71CC62</color>
     <color name="forTheBtnEnterSignIn">#CBCBCB</color>
+    <color name="red">#FF0000</color>
 </resources>
