--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -17,7 +17,7 @@
 
         android:layout_marginTop="142dp"
         android:background="@drawable/body_for_edit_text"
-        android:hint="Логин"
+        android:hint="@string/string_login"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:textSize="30dp" />
@@ -34,7 +34,7 @@
         android:layout_marginEnd="47dp"
         android:layout_marginRight="47dp"
         android:background="@drawable/body_for_edit_text"
-        android:hint="Пароль"
+        android:hint="@string/string_paswd"
         android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:textSize="30dp" />
@@ -46,7 +46,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="540dp"
 
-        android:hint="Впервые в PennyJoy?"
+        android:hint="@string/first_time_in_pj"
         android:linksClickable="true"
         android:textColorHint="@color/forTheFirstTimeInPennyJoy" />
 
@@ -65,11 +65,9 @@
         android:gravity="center"
         android:fontFamily="sans-serif-condensed"
         android:background="@drawable/body_for_btn_enter_sign_in"
-
         android:onClick="onClick"
-
         android:textSize="20dp"
-        android:text="Войти" />
+        android:text="@string/enter_btn" />
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -77,7 +75,7 @@
         android:layout_width="274dp"
         android:layout_height="29dp"
         android:onClick="onClick"
-        android:text="Зарегистрироваться"
+        android:text="@string/sign_up_btn"
         android:textSize="17dp"
         android:textColor="@color/white"
         android:textAllCaps="false"
