--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -34,7 +34,7 @@
         android:layout_marginEnd="47dp"
         android:layout_marginRight="47dp"
         android:background="@drawable/body_for_edit_text"
-        android:hint="@string/string_paswd"
+        android:hint="@string/string_passwd"
         android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:textSize="30dp" />
