--- a/app/src/main/res/layout/activity_sign_up_no_acc2.xml
+++ b/app/src/main/res/layout/activity_sign_up_no_acc2.xml
@@ -39,8 +39,8 @@
         android:layout_marginTop="280dp"
         android:textSize="30dp"
         android:paddingLeft="20dp"
-        android:inputType="textPersonName"
-        android:hint="@string/srting_passwd"
+        android:inputType="textPassword"
+        android:hint="@string/string_passwd"
         android:background="@drawable/body_for_edit_text"/>
 
     <EditText
@@ -49,7 +49,7 @@
         android:layout_height="53dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="380dp"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:hint="@string/string_repeat_passwd"
         android:textSize="30dp"
         android:paddingLeft="20dp"
