--- a/app/src/main/res/layout/fragment_add_good_tab.xml
+++ b/app/src/main/res/layout/fragment_add_good_tab.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
 
-    tools:context="Fragments.AddGoodTab">
+    tools:context="com.example.pennyjoy.Fragments.AddGoodTab">
     <TextView
         android:id="@+id/lblTitleCategory"
         android:layout_width="wrap_content"
@@ -84,7 +84,7 @@
         android:layout_height="48dp"
 
         android:background="@drawable/addgoodbtn"
-        android:onClick="addGoodInFragClicked"
+
         android:layout_centerHorizontal="true"
         android:layout_marginTop="600dp"
          />
