--- a/app/src/main/res/layout/activity_add_good_and_other.xml
+++ b/app/src/main/res/layout/activity_add_good_and_other.xml
@@ -7,21 +7,9 @@
     tools:context=".AddGoodAndOtherActivity">
 
 
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:background="@color/black"
-        android:layout_height="wrap_content" />
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/black"
-        app:tabIconTint="@color/white"
-        app:tabIndicatorColor="@color/white"
-
         />
 
 
