--- a/app/src/main/res/layout/fragment_timer_tab.xml
+++ b/app/src/main/res/layout/fragment_timer_tab.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context="Fragments.TimerTab">
+    tools:context="com.example.pennyjoy.Fragments.TimerTab">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
