--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item android:title="Поставить таймер"
+        android:id="@+id/nav_timer"
+        android:icon="@drawable/timer"
+        app:showAsAction="ifRoom"/>
+
     <item android:title="Добавить товар"
-        android:id="@+id/addGoodItemInBar"
-        android:icon="@drawable/addgooditem"
+    android:id="@+id/nav_add_good"
+    android:icon="@drawable/addgooditem"
+    app:showAsAction="ifRoom"/>
+
+    <item android:title="Получить совет"
+        android:id="@+id/nav_adviser"
+        android:icon="@drawable/lamp"
         app:showAsAction="ifRoom"/>
 </menu>
