--- a/app/src/main/res/layout/activity_add_good_and_other.xml
+++ b/app/src/main/res/layout/activity_add_good_and_other.xml
@@ -8,9 +8,20 @@
 
 
     <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/bottom_navigation"
+
         />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:menu="@menu/menu_main"
+        android:layout_alignParentTop="true"
+        android:id="@+id/bottom_navigation"/>
+
 
 
 </RelativeLayout>
