--- a/app/src/main/res/layout/activity_add_good_and_other.xml
+++ b/app/src/main/res/layout/activity_add_good_and_other.xml
@@ -7,7 +7,7 @@
     tools:context=".AddGoodAndOtherActivity">
 
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
