--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_marginRight="18dp"
         android:src="@drawable/settings"
         android:backgroundTint="@color/white"
+        android:foreground="?android:attr/selectableItemBackground"
         app:fabSize="normal"
         app:maxImageSize="40dp"
         />
@@ -31,6 +32,7 @@
         android:layout_marginTop="590dp"
         android:layout_marginLeft="18dp"
         android:onClick="addGoodClicked"
+        android:foreground="?android:attr/selectableItemBackground"
 
         app:srcCompat="@drawable/btn_add_good_image"
 
@@ -46,9 +48,11 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+
         android:onClick="moneyPigBtnClicked"
 
         app:srcCompat="@drawable/buttonmoneypig"
+
         tools:ignore="VectorDrawableCompat" />
 
     <ImageButton
@@ -61,8 +65,10 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="330dp"
         android:onClick="chartBtnClicked"
+        android:foreground="?android:attr/selectableItemBackground"
 
-        app:srcCompat="@drawable/chart_btn_image"
+
+        android:src="@drawable/chart_btn_image"
         tools:ignore="VectorDrawableCompat" />
 
 
