--- a/app/src/main/res/layout/fragment_add_good.xml
+++ b/app/src/main/res/layout/fragment_add_good.xml
@@ -133,7 +133,10 @@
      android:backgroundTint="@color/white"
      android:layout_centerHorizontal="true"
      android:layout_alignParentLeft="true"
-     android:layout_marginTop="560dp"/>
+     android:layout_marginTop="556dp"
+     android:layout_marginLeft="16dp"
+
+     />
 
 
 </RelativeLayout>
