--- a/app/src/main/res/layout/fragment_add_good.xml
+++ b/app/src/main/res/layout/fragment_add_good.xml
@@ -13,6 +13,7 @@
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
         android:textSize="30dp"
+        android:layout_marginTop="15dp"
         />
 
    <Spinner
@@ -21,14 +22,14 @@
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bodyforcategoryspinner"
-       android:layout_marginTop="47dp"
+       android:layout_marginTop="62dp"
        />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="57dp"
+        android:layout_marginTop="72dp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="50dp"
         android:src="@drawable/selectorforspinner"/>
@@ -39,7 +40,7 @@
         android:text="@string/nameAddGood"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="115dp"
         android:textSize="30dp"
         />
 
@@ -59,7 +60,7 @@
         android:text="@string/costAddGood"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="230dp"
+        android:layout_marginTop="245dp"
         android:textSize="30dp"
         />
     <!-- в макс длине не уверен- -->
@@ -132,9 +133,9 @@
      app:maxImageSize="40dp"
      android:backgroundTint="@color/white"
      android:layout_centerHorizontal="true"
-     android:layout_alignParentLeft="true"
+     android:layout_alignParentRight="true"
      android:layout_marginTop="556dp"
-     android:layout_marginLeft="16dp"
+     android:layout_marginRight="16dp"
 
      />
 
