--- a/app/src/main/res/layout/fragment_add_good.xml
+++ b/app/src/main/res/layout/fragment_add_good.xml
@@ -60,7 +60,7 @@
         android:text="@string/costAddGood"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="245dp"
+        android:layout_marginTop="228dp"
         android:textSize="30dp"
         />
     <!-- в макс длине не уверен- -->
@@ -70,7 +70,7 @@
         android:layout_width="323dp"
         android:layout_height="37dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="288dp"
         android:inputType="numberDecimal"
         android:paddingLeft="20dp"
         android:maxLength="12"
@@ -83,7 +83,7 @@
         android:text="₸"
         android:textColor="@color/black"
         android:textSize="29dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="288dp"
         android:layout_marginRight="70dp"/>
 
 
@@ -127,6 +127,7 @@
         android:layout_marginTop="560dp"
         />
  <com.google.android.material.floatingactionbutton.FloatingActionButton
+     android:id="@+id/historyBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/clock"
@@ -134,7 +135,7 @@
      android:backgroundTint="@color/white"
      android:layout_centerHorizontal="true"
      android:layout_alignParentRight="true"
-     android:layout_marginTop="556dp"
+     android:layout_marginTop="554dp"
      android:layout_marginRight="16dp"
 
      />
