--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="forTheBtnRegistrationSignIn">#71CC62</color>
     <color name="forTheBtnEnterSignIn">#CBCBCB</color>
     <color name="red">#FF0000</color>
+    <color name="forTargetLayout">#C0C0C0</color>
 
 </resources>
