floating action button menu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,72 @@
         android:src="@drawable/settings"
         android:backgroundTint="@color/white"
         android:foreground="?android:attr/selectableItemBackground"
+        android:focusable="true"
+        android:clickable="true"
         app:fabSize="normal"
         app:maxImageSize="40dp"
+        android:onClick="settingsClicked"
+
         />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabSettingsOfUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="520dp"
+        android:layout_marginRight="18dp"
+        android:src="@drawable/person_image"
+        android:backgroundTint="@color/white"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:focusable="true"
+        android:clickable="true"
+        app:fabSize="normal"
+        android:visibility="invisible"
+        android:onClick="settingsOfUserClicked"
+        app:maxImageSize="40dp"
+        />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabSettingsOfCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="450dp"
+        android:layout_marginRight="18dp"
+        android:src="@drawable/category_image"
+        android:backgroundTint="@color/white"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:focusable="true"
+        android:clickable="true"
+        app:fabSize="normal"
+        android:visibility="invisible"
+        android:onClick="settingsOfCategoryClicked"
+        app:maxImageSize="40dp"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabSettingsOfCurrency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="380dp"
+        android:layout_marginRight="18dp"
+        android:src="@drawable/currencies_svgrepo_com"
+        android:backgroundTint="@color/white"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:focusable="true"
+        android:clickable="true"
+        app:fabSize="normal"
+        android:visibility="invisible"
+        app:maxImageSize="40dp"
+        android:onClick="settingsOfCurrenciesClicked"
+        />
+
+
+
+
 
     <ImageButton
         android:id="@+id/addGoodBtn"
