--- a/app/src/main/res/layout/activity_sign_up_no_acc3.xml
+++ b/app/src/main/res/layout/activity_sign_up_no_acc3.xml
@@ -35,4 +35,33 @@
         android:inputType="numberDecimal"
         android:hint="Заработная плата" />
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp"
+        android:textSize="30dp"
+        android:text="Выберите валюту"
+        android:textColor="@color/white"/>
+
+    <Spinner
+        android:id="@+id/currencyDropDown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="122dp"
+        android:background="@drawable/body_for_spinner_currency"
+        android:textSize="400dp"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="140dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="130dp"
+        android:src="@drawable/selector_for_currency"/>
+
 </RelativeLayout>
