--- a/app/src/main/res/layout/good_template.xml
+++ b/app/src/main/res/layout/good_template.xml
@@ -38,9 +38,10 @@
         android:layout_marginRight="60dp"/>
 
     <TextView
+        android:id="@+id/currencyOfCostInHistoryOfGood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="₸"
+
         android:textSize="25dp"
         android:textStyle="bold"
         android:textColor="@color/white"
