--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="forTheBtnEnterSignIn">#CBCBCB</color>
     <color name="red">#FF0000</color>
     <color name="forTargetLayout">#C0C0C0</color>
+    <color name="gray">#DDDD</color>
 
 </resources>
